<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_stemgitar"
    tools:context="com.aldimas.stemgitar.MainActivity">

    <TextView
        android:id="@+id/Title3"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:textColor="@color/white"
        android:text="@string/title3"
        android:textSize="24sp"
       />


    <TextView
        android:id="@+id/Title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/title5"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/Title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:fontFamily="cursive"
        android:text="Silakan izinkan akses Microphone Anda dahulu!"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic" />



    <TextView
        android:id="@+id/Instruction1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/instruction1"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="29dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center">

    <ImageButton
        android:id="@+id/GuitarTuner"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/icongitarbunder"
        android:contentDescription="@string/guitar_tuner"
        android:src="@drawable/icongitar"
        android:scaleType="fitXY"
         />
    </androidx.cardview.widget.CardView>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="Klik Gambar Diatas"
        android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="115dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Information"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:background="@null"
                android:contentDescription="@string/information"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/information" />

            <ImageButton
                android:id="@+id/Tentang"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/information"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tentangicon" />

            <ImageButton
                android:id="@+id/Cara"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/information"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/helpicon3" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="cursive"
            android:text="@string/title8"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="cursive"
            android:text="Tentang"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="cursive"
            android:text="How to?"
            android:textSize="16sp"
            android:textStyle="italic" />



    </LinearLayout>



</LinearLayout>
